--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -247,5 +247,7 @@
         <file alias="pause_small_thin_outline_button_outline_hover">images/themed/dark/pause_small_thin_outline_button_outline_hover.svg</file>
         <file alias="play_small_thin_outline_button_outline">images/themed/dark/play_small_thin_outline_button_outline.svg</file>
         <file alias="play_small_thin_outline_button_outline_hover">images/themed/dark/play_small_thin_outline_button_outline_hover.svg</file>
+        <file alias="info_small_thin_outline_text_info">images/themed/dark/info_small_thin_outline_text_info.svg</file>
+        <file alias="x_circle_small_thin_outline_text_error">images/themed/dark/x_circle_small_thin_outline_text_error.svg</file>
     </qresource>
 </RCC>
