--- a/src/MEGASync/gui/ui/BannerWidget.ui
+++ b/src/MEGASync/gui/ui/BannerWidget.ui
@@ -58,7 +58,7 @@
 
 #wContent[type=&quot;warning&quot;] #lIcon
 {
-	image: url(:/images/banner/warning.svg);
+	image: url(:/alert-triangle.svg);
 }
 
 /* Error */
@@ -75,7 +75,7 @@
 
 #wContent[type=&quot;error&quot;] #lIcon
 {
-	image: url(:/images/banner/error.svg);
+	image: url(:/x_circle_small_thin_outline_text_error);
 }
 
 /* Info */
@@ -92,8 +92,7 @@
 
 #wContent[type=&quot;info&quot;] #lIcon
 {
-	qproperty-icon: url(:/info_small_thin_outline);
-	qproperty-normal_off: &quot;text-info&quot;;
+	qproperty-icon: url(:/info_small_thin_outline_text_info);
 }
 </string>
   </property>
@@ -168,7 +167,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="IconLabel" name="lIcon">
+          <widget class="QToolButton" name="lIcon">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -239,11 +238,6 @@
   </layout>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>IconLabel</class>
-   <extends>QToolButton</extends>
-   <header>tokenizer/TokenizableItems/IconLabel.h</header>
-  </customwidget>
   <customwidget>
    <class>WordWrapLabel</class>
    <extends>QLabel</extends>
