--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -249,5 +249,14 @@
         <file alias="play_small_thin_outline_button_outline_hover">images/themed/dark/play_small_thin_outline_button_outline_hover.svg</file>
         <file alias="info_small_thin_outline_text_info">images/themed/dark/info_small_thin_outline_text_info.svg</file>
         <file alias="x_circle_small_thin_outline_text_error">images/themed/dark/x_circle_small_thin_outline_text_error.svg</file>
+        <file alias="move-down_small_thin_outline_icon_primary">images/themed/dark/move-down_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-up_small_thin_outline_icon_primary">images/themed/dark/move-up_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-top_small_thin_outline_icon_primary">images/themed/dark/move-top_small_thin_outline_icon_primary.svg</file>
+        <file alias="eraser_small_thin_outlin_icon_primary">images/themed/dark/eraser_small_thin_outlin_icon_primary.svg</file>
+        <file alias="external-link_small_thin_outline_icon_primary">images/themed/dark/external-link_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-bottom_small_thin_outline_icon_primary">images/themed/dark/move-bottom_small_thin_outline_icon_primary.svg</file>
+        <file alias="play_small_thin_outline_icon_primary">images/themed/dark/play_small_thin_outline_icon_primary.svg</file>
+        <file alias="pause_small_thin_outline_icon_primary">images/themed/dark/pause_small_thin_outline_icon_primary.svg</file>
+        <file alias="x_small_thin_outline_icon_primary">images/themed/dark/x_small_thin_outline_icon_primary.svg</file>
     </qresource>
 </RCC>
