--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -252,5 +252,14 @@
         <file alias="play_small_thin_outline_button_outline_hover">images/themed/light/play_small_thin_outline_button_outline_hover.svg</file>
         <file alias="info_small_thin_outline_text_info">images/themed/light/info_small_thin_outline_text_info.svg</file>
         <file alias="x_circle_small_thin_outline_text_error">images/themed/light/x_circle_small_thin_outline_text_error.svg</file>
+        <file alias="move-bottom_small_thin_outline_icon_primary">images/themed/light/move-bottom_small_thin_outline_icon_primary.svg</file>
+        <file alias="eraser_small_thin_outline_icon_primary">images/themed/light/eraser_small_thin_outline_icon_primary.svg</file>
+        <file alias="external-link_small_thin_outline_icon_primary">images/themed/light/external-link_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-down_small_thin_outline_icon_primary">images/themed/light/move-down_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-up_small_thin_outline_icon_primary">images/themed/light/move-up_small_thin_outline_icon_primary.svg</file>
+        <file alias="move-top_small_thin_outline_icon_primary">images/themed/light/move-top_small_thin_outline_icon_primary.svg</file>
+        <file alias="pause_small_thin_outline_icon_primary">images/themed/light/pause_small_thin_outline_icon_primary.svg</file>
+        <file alias="play_small_thin_outline_icon_primary">images/themed/light/play_small_thin_outline_icon_primary.svg</file>
+        <file alias="x_small_thin_outline_icon_primary">images/themed/light/x_small_thin_outline_icon_primary.svg</file>
     </qresource>
 </RCC>
